crates/formatter/tests/snapshots/snapshots__migrations__000420_oauth2_provider_app_codes_add_columns.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table oauth2_provider_app_codes
	drop column state_hash,
	drop column redirect_uri;
