crates/formatter/tests/snapshots/snapshots__migrations__000420_oauth2_provider_app_codes_add_columns.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table oauth2_provider_app_codes add column state_hash text,
add column redirect_uri text;

comment on column oauth2_provider_app_codes.state_hash is 'SHA-256 hash of the OAuth2 state parameter, stored to prevent state reflection attacks.';

comment on column oauth2_provider_app_codes.redirect_uri is 'The redirect_uri provided during authorization, to be verified during token exchange (RFC 6749 §4.1.3).';
