crates/formatter/tests/snapshots/snapshots__migrations__000423_chat_archive.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table chats add column archived boolean default false not null;
