crates/formatter/tests/snapshots/snapshots__migrations__000424_chat_last_error.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table chats add column last_error text;
