crates/formatter/tests/snapshots/snapshots__migrations__000425_remove_chat_workspace_agent_id.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table chats
	add column workspace_agent_id UUID references workspace_agents (
		id
	) on delete set null;
